--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
-.idea
-.vscode
-demo/dist
-node_modules
-locale/compile
-test/output
-package-lock.json
+node_modules/
+.DS_Store
+dist/
+lib/
+es/
 
+# editor config
+.idea
+*.iml
+*.swp
+*.swo
+
+# istanbul
+coverage
+
+# Logs
+logs
+*.log
+# eslint
+.eslintcache
