--- a/package.json
+++ b/package.json
@@ -2,31 +2,44 @@
   "name": "micro-front",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "bin": {
-    "micro": "./bin/index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@vue/cli": "^5.0.5",
-    "chalk": "^5.0.1",
-    "clear": "^0.1.0",
-    "commander": "^9.3.0",
-    "figlet": "^1.5.2",
+  "main": "lib/index.min.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/types/index.d.ts",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
     "fs-extra": "^10.1.0",
-    "handlebars": "^4.7.7",
-    "inquirer": "^8.2.4",
-    "install": "^0.13.0",
-    "json-format": "^1.0.1",
-    "npm": "^8.12.2",
-    "open": "^8.4.0",
-    "ora": "^6.1.0",
-    "simple-git": "^3.7.1",
-    "watch": "^1.0.2"
-  }
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "rollup": "^2.77.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
+  },
+  "scripts": {
+    "clean": "rimraf lib",
+    "build:types": "tsc -b ./tsconfig.types.json",
+    "build:watch": "cross-env NODE_ENV='development' rollup -c -w",
+    "build": "cross-env NODE_ENV='production' rollup -c && yarn build:types",
+    "lint": "eslint --ext .ts,.js",
+    "lint:fix": "eslint --fix --ext .ts,.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "license": "MIT"
 }
