--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "micro-front",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.1",
+  "description": "micro-front",
   "main": "lib/index.min.js",
   "module": "lib/index.esm.js",
   "types": "lib/types/index.d.ts",
-  "dependencies": {},
+  "scripts": {
+    "clean": "rimraf lib",
+    "build:types": "tsc -b ./tsconfig.types.json",
+    "build:watch": "cross-env NODE_ENV='development' rollup -c -w",
+    "build": "cross-env NODE_ENV='production' rollup -c && yarn build:types",
+    "lint": "eslint --ext .ts,.js",
+    "lint:fix": "eslint --fix --ext .ts,.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@rollup/plugin-babel": "^5.3.1",
@@ -31,15 +40,17 @@
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   },
-  "scripts": {
-    "clean": "rimraf lib",
-    "build:types": "tsc -b ./tsconfig.types.json",
-    "build:watch": "cross-env NODE_ENV='development' rollup -c -w",
-    "build": "cross-env NODE_ENV='production' rollup -c && yarn build:types",
-    "lint": "eslint --ext .ts,.js",
-    "lint:fix": "eslint --fix --ext .ts,.js",
-    "test": "jest",
-    "test:watch": "jest --watch"
+  "license": "MIT",
+  "directories": {
+    "lib": "lib"
   },
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mr18/micro-front.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/mr18/micro-front/issues"
+  },
+  "homepage": "https://github.com/mr18/micro-front#readme"
 }
