--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "baseUrl": "."
   },
+  "compileOnSave": false,
   "include": ["src", "types"],
-  "exclude": ["node_modules", "**/__tests__/**"]
+  "exclude": ["node_modules", "**/__tests__/**/*"]
 }
