--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
       - run: npm test
+      - run: npm build
