--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "cross-env": "^7.0.3",
+    "dts-bundle": "^0.7.3",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -45,9 +46,7 @@
     "typescript": "^4.7.4"
   },
   "license": "MIT",
-  "directories": {
-    "lib": "lib"
-  },
+  "directories": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mr18/micro-front.git"
